<resources>
    <string name="app_name">笔记</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!--编辑器文本-->
    <string name="icon_code">&#xf000;</string>
    <string name="icon_bold">&#xf001;</string>
    <string name="icon_italic">&#xf002;</string>
    <string name="icon_underline">&#xf003;</string>
    <string name="icon_times">&#xf004;</string>
    <string name="icon_strike_through">&#xf005;</string>
    <string name="icon_list_ol">&#xf006;</string>
    <string name="icon_list_ul">&#xf007;</string>
    <string name="icon_quote_left">&#xf008;</string>
    <string name="icon_blockquote">@string/icon_quote_left</string>
    <string name="icon_table">&#xf009;</string>
    <string name="icon_link">&#xf00a;</string>
    <string name="icon_image">&#xf00b;</string>
    <string name="icon_minus">&#xf00c;</string>
    <string name="icon_hr">@string/icon_minus</string>
    <string name="icon_indent">&#xf00d;</string>
    <string name="icon_outdent">&#xf00e;</string>
    <string name="icon_unlink">&#xf00f;</string>
    <string name="icon_caret_down">&#xf010;</string>
    <string name="icon_caret_right">&#xf011;</string>
    <string name="icon_upload">&#xf012;</string>
    <string name="icon_undo">&#xf013;</string>
    <string name="icon_smile_o">&#xf014;</string>
    <string name="icon_tint">&#xf015;</string>
    <string name="icon_font">&#xf016;</string>
    <string name="icon_html5">&#xf017;</string>
    <string name="icon_mark">&#xf018;</string>
    <string name="icon_align_center">&#xf019;</string>
    <string name="icon_align_left">&#xf01a;</string>
    <string name="icon_align_right">&#xf01b;</string>
    <string name="icon_font_minus">&#xf01c;</string>
    <string name="icon_font_markdown">&#xf01d;</string>
    <string name="icon_checklist">&#xf01e;</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
